# k9-kmeans

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: install.yml
notebooks/: initial_embedding_test.ipynb
scripts/: eps_optimisation.py  run_dbscan.py  run_kmeans.sh
src/k9kmeans/: logging.py  utils.py
src/k9kmeans/app/: app_cli.py  dashboard.py
src/k9kmeans/clustering/: dbscan.py  kmeans.py  preprocessing.py  results.py  utils.py
src/k9kmeans/image_utils/: processing.py
src/k9kmeans/pipeline/: embeddings.py
src/k9kmeans/visualisation/: dimensionality_reduction.py  elbow.py  scatter.py
tests/: test_clustering_utils.py  test_embeddings_pipeline.py  test_load_embeddings.py  test_utils_processing.py
