[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'k9_kmeans'
version = '0.1.0'
description = 'Clustering photos of my dog'
authors = [
  { name = 'Sam Salling-Dysch', email = 'sdysch94+fromk9kmeans@gmail.com' }
]
readme = 'README.md'
requires-python = '>=3.12'

dependencies = [
  'matplotlib',
  'seaborn',
  'pandas',
  'numpy',
  'streamlit',
  'scikit-learn',
  'Pillow',
  'tqdm',
]

[tool.setuptools.packages.find]
where = ['src']

[project.optional-dependencies]
dev = [
  'black',
  'pre-commit',
  'mypy',
  'types-PyYAML'
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = 3.12
files = "src"
ignore_missing_imports = true
strict = true
