[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'k9_kmeans'
version = '0.1.0'
description = 'Clustering photos of my dog'
authors = [
  { name = 'Sam Salling-Dysch', email = 'sdysch94+fromk9kmeans@gmail.com' }
]
readme = 'README.md'
requires-python = '>=3.12'

dependencies = [
  'pillow==11.3.0',
  'jupyterlab==4.4.8',
  'matplotlib==3.10.6',
  'numpy==2.3.3',
  'pandas==2.3.2',
  'scikit-learn==1.7.2',
  'seaborn==0.13.2',
  'streamlit==1.49.1',
  'torch==2.8.0',
  'torchvision==0.23.0',
  'tqdm==4.67.1',
  'transformers==4.56.2',
]

[tool.setuptools.packages.find]
where = ['src']

[project.optional-dependencies]
dev = [
  'black==25.9.0',
  'pre_commit==4.3.0',
  'mypy==1.18.2',
  'types-PyYAML>=6.0.12',
  'pytest==8.4.2',
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = 3.12
files = "src"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
run_dashboard = "k9kmeans.app.app_cli:main"
